--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 
 
     
-    <header class="intro-header" style="background-image: url('https://ictac2020.github.io//img/stpauls.jpg')">
+    <header class="intro-header">
      <div class="container">
        <div class="row">
          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
            <div class="site-heading">
-             <h1>ICTAC 2020</h1>
+             <h1>ICTAC 2021</h1>
              <hr class="small">
-             <span class="subheading">17th International Colloquium on Theoretical Aspects of Computing<br/>30 Nov - 4 Dec 2020, Macau S.A.R., China</span>
+             <span class="subheading">18th International Colloquium on Theoretical Aspects of Computing<br/>6 - 10 December 2021, Nur-Sultan, Kazakhatan</span>
 	   </div>
          </div>
        </div>
@@ -150,26 +150,16 @@
 
 <hr />
 
-<p><strong><span style="color:red">Virtual Conference. </span></strong>
-<span style="color:red">Due to the COVID-pandemic, the organisation committee decided that
-ICTAC 2020 will be held virtually <strong>only</strong>.  Accepted papers will be published
-as a LNCS proceedings as planned, and have to be presented at the virtual conference.</span></p>
 
-<hr />
+<h2 id="welcome-to-ictac-2021">Welcome to ICTAC 2020</h2>
 
-<h2 id="welcome-to-ictac-2020">Welcome to ICTAC 2020</h2>
-
-<p>The 17th International Colloquium on Theoretical Aspects of Computing
-(ICTAC) will take place in Macau S.A.R., China on <strong>30 Nov - 4 Dec, 2020</strong>.</p>
+<p>The 18th International Colloquium on Theoretical Aspects of Computing
+(ICTAC) will take place in Nur-Sultan, Kazakhatan on <strong>36 - 10 December 20210</strong>.</p>
 
 <h2 id="news">News</h2>
 
 <ul>
-<li><a href="./rvlec">Lectures on RV</a> will be given on 30 Nov - 1 Dec.  Registration is for free!</li>
-<li><a href="./registration">Conference registration</a> is open now!</li>
-<li>The list of accepted papers is available <a href="accepted">here</a>.</li>
-<li>We’re happy to announce ICTAC&rsquo;20&rsquo;s keynote speakers: <a href="https://ictac2020.github.io/keynotes/#kh">Klaus Havelund</a>, <a href="https://ictac2020.github.io/keynotes/#mh">Marieke Huisman</a>, and <a href="https://ictac2020.github.io/keynotes/#nz">Naijun Zhan</a>.</li>
-<li><a href="https://ictac2020.github.io/dates/">Extended submission deadlines: Friday, 17 July 2020</a></li>
+<li><a href="https://ictac2020.github.io/dates/">Submission deadline: Friday 7 May 2021</a></li>
 </ul>
 
             </div>
