--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <h2 id="news">News</h2>
 
 <ul>
-<li><a href="https://ictac2020.github.io/dates/">Submission deadline: Friday 7 May 2021</a></li>
+<li>Paper Submission deadline: Friday 7 May 2021</li>
+<li>Notification: Friday 18 June 2021</li>
 </ul>
 
             </div>
