--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
 
 <body>
 
+	<center>
 <h1>ICTAC 2021</h1>
 	<h2>The 18th International Colloquium on Theoretical Aspects of Computing</h2>>    
-    
+        <h2>Nur-Sultan, Kazakhatan on <strong>6 - 10 December 2021</strong>.</h2>
 
-<p>The 18th International Colloquium on Theoretical Aspects of Computing
-(ICTAC) will take place in Nur-Sultan, Kazakhatan on <strong>6 - 10 December 2021</strong>.</p>
-
-<h2 id="news">News</h2>
+<h2 id="news">Important Dates</h2>
 
 <ul>
 <li>Paper Submission deadline: Friday 7 May 2021</li>
@@ -63,14 +61,7 @@ countries.</p>
             <div class="col-lg-9 col-lg-offset-0 col-md-9 col-md-offset-0">
 	      
 
-<h4 id="organised-by">Organised by</h4>
-
-<p><center><a href="https://www.um.edu.mo/"><img src="./img/um-logo.jpg" style="width:30%;"></a>&emsp; &emsp; &emsp; &emsp;<a href="https://hvl.no/en/"><img src="./img/hvl-logo.png" style="width:30%;"></a></center></p>
-
-<h4 id="sponsored-by">Sponsored by</h4>
-
-<p><center><a href="https://link.springer.com/conference/ictac"><img src="./img/LNCS-Logo.jpg" style="width:30%;"></a> &emsp; &emsp; &emsp;
-&emsp;<a href="https://www.forskningsradet.no/en/"><img src="./img/nfr.png" style="width:30%;"></a></center></p>
+<h4 id="organised-by">Organised by</h4> Nuzarbayev University and the University of Oslo
 
             </div>
         </div>
