--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 	<center>
 <h1>ICTAC 2021</h1>
 	<h2>The 18th International Colloquium on Theoretical Aspects of Computing</h2>>    
-        <h2>Nur-Sultan, Kazakhatan on <strong>6 - 10 December 2021</strong>.</h2>
-
+        <h2>Nur-Sultan, Kazakhatan <strong>6 - 10 December 2021</strong>.</h2>
+<hr>
 <h2 id="news">Important Dates</h2>
 
 <ul>
-<li>Paper Submission deadline: Friday 7 May 2021</li>
-<li>Notification: Friday 18 June 2021</li>
+	<li><strong>Paper Submission deadline: Friday 7 May 2021</strong></li>
+	<li><strong>Notification: Friday 18 June 2021</strong></li>
 </ul>
 
             </div>
