--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <h1>ICTAC 2021</h1>
 	<h2>The 18th International Colloquium on Theoretical Aspects of Computing</h2>>    
         <h2>Nur-Sultan, Kazakhatan <strong>6 - 10 December 2021</strong>.</h2>
+	</center>
 <hr>
 <h2 id="news">Important Dates</h2>
 
