--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<center>
 <h1>ICTAC 2021</h1>
-	<h2>The 18th International Colloquium on Theoretical Aspects of Computing</h2>>    
+	<h2>The 18th International Colloquium on Theoretical Aspects of Computing</h2>    
         <h2>Nur-Sultan, Kazakhatan <strong>6 - 10 December 2021</strong>.</h2>
 	</center>
 <hr>
