--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<center>
 <h1>ICTAC 2021</h1>
 	<h2>The 18th International Colloquium on Theoretical Aspects of Computing</h2>    
-        <h2>Nur-Sultan, Kazakhatan <strong>6 - 10 December 2021</strong>.</h2>
+        <h2>Nur-Sultan, Kazakhatan, <strong>6 - 10 December 2021</strong></h2>
 	</center>
 <hr>
 <h2 id="news">Important Dates</h2>
@@ -62,7 +62,7 @@ countries.</p>
             <div class="col-lg-9 col-lg-offset-0 col-md-9 col-md-offset-0">
 	      
 
-<h4 id="organised-by">Organised by</h4> Nuzarbayev University and the University of Oslo
+<h4 id="organised-by">Organised by Nuzarbayev University and the University of Oslo</h4>
 
             </div>
         </div>
