--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ countries.</p>
                   <ul class="list-inline text-center">
                     
                       <li>
-                        <a href="mailto:antonio.cerone@enu.edu.kz">
+                        <a href="mailto:antonio.cerone@nu.edu.kz">
                           <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
