--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <ul>
 	<li><strong>Paper Submission deadline: Friday 7 May 2021</strong></li>
-	<li><strong>Notification: Friday 18 June 2021</strong></li>
+	<li><strong>Accept/Reject Notification: Friday 18 June 2021</strong></li>
 </ul>
 
             </div>
