--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@ and
 <li> tool papers (6 pages max, excluding references).
 </ol>
 All submissions must be original, unpublished, and not submitted
-concurrently for publication elsewhere. Paper submission is done via
+concurrently for publication elsewhere.
+<!--
+Paper submission is done via
 EasyChair at <a href="https://easychair.org/conferences/?conf=ictac2021">https://easychair.org/conferences/?conf=ictac2021</a>. 
+-->
 
 Papers must be formatted according to the guidelines for Springer LNCS
 papers (see <a
