--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ Computing</h2>
 </center>
 
 <hr>
+<h2 id="news" style="color:#B40431;">News</h2>
+<hr size="1">
+<ul>
+<li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan. However, given the current uncertainty, virtual presentations will also be an opportunity.</li>
+</ul>
 <h2 id="news" style="color:#B40431;">Important Dates</h2>
 <hr size="1">
 <ul>
@@ -64,7 +69,7 @@ promote research cooperation between developing and industrial
 countries.</p>
 </p>
 
-<p>The topics of the conference include, but are not limited to:</p>
+<p>The conference concerns all aspect of theoretical computer science, including, but are not limited to:</p>
 
 <ul>
 <li>Languages and automata</li>
@@ -76,16 +81,16 @@ countries.</p>
 <li>Theories of distributed computing</li>
 <li>Models of objects and components</li>
 <li>Coordination models</li>
-<li>Models of software architectures</li>
 <li>Timed, hybrid, embedded and cyber-physical systems</li>
+<li>Security and privacy</li>
 <li>Static analysis</li>
 <li>Probabilistic and statistical verification</li>
 <li>Software verification</li>
 <li>Software testing</li>
+<li>Runtime verification</li>
 <li>Program generation and transformation</li>
-<li>Model checking and  theorem proving</li>
-<li>Verified software, formalized programming theory</li>
-<li>Applications of logic/formal methods</li>
+<li>Model checking and theorem proving</li>
+<li>Applications and case studies</li>
 </ul>
 <p> &nbsp;
 
