--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Computing</h2>
 <ul>
 <li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan. However, given the current uncertainty, virtual presentations will also be an opportunity.</li>
 </ul>
+<p>&nbsp;
 <h2 id="news" style="color:#B40431;">Important Dates</h2>
 <hr size="1">
 <ul>
