--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@ of Oslo, Norway</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University , Denmark</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
 	<li>Manuel Mazzara, Innopolis University, Russia</li>
-	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France<\li>
+	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
 	<li><a href="http://olveczky.se">Peter &Ouml;lveczky</a>, University of Oslo, Norway
 	<li>Riadh Robbana, Tunis el Manar University, Tunisia</li>
 	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
-	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, Iniversity of Bologna, Italy</li>
+	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
 	<li><a href="https://ict.hvl.no/people/volker-stolz/">Volker Stolz</a>, Western Norway University of Applied Sciences, Norway</i>
 
 		    </ul>
