--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ of Oslo, Norway</li>
 <ul>
 	<li><a href="https://ths.rwth-aachen.de/people/erika-abraham/">Erika &Aacute;brah&aacute;m</a>, RWTH Aachen, Germany</li>
 	<li>Musab A. Alturki, Runtime Verification Inc., USA, and King Fahd University of Petroleum and Minerals, Saudi Arabia</li>
-	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae, POSTECH, Korea</li>
+	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae</a>, POSTECH, Korea</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
