--- a/index.html
+++ b/index.html
@@ -162,13 +162,16 @@ of Oslo, Norway</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
+		<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
 	<li><a href="https://people.csiro.au/v/R/robert-vanglabbeek">Rob van Glabbeek</a>, University of New South Wales, Australia</li>
 	<li><a href="http://www.stefan-gruner.de">Stefan Gruner</a>, University of Pretoria, South Africa</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University , Denmark</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
 	<li>Manuel Mazzara, Innopolis University, Russia</li>
-	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
+	<li><a href="https://researchers.uq.edu.au/researcher/644">Larissa Meinicke</a>, The University of Queensland, Australia</li>
+	<li>Hans de Nivelle, Nazarbayev University, Kazakhstan</li>
 	<li><a href="http://olveczky.se">Peter &Ouml;lveczky</a>, University of Oslo, Norway
+	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
 	<li>Riadh Robbana, Tunis el Manar University, Tunisia</li>
 	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
 	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
