--- a/index.html
+++ b/index.html
@@ -158,12 +158,15 @@ of Oslo, Norway</li>
 <ul>
 	<li><a href="https://ths.rwth-aachen.de/people/erika-abraham/">Erika &Aacute;brah&aacute;m</a>, RWTH Aachen, Germany</li>
 	<li>Musab A. Alturki, Runtime Verification Inc., USA, and King Fahd University of Petroleum and Minerals, Saudi Arabia</li>
+	<li><a href="https://www.loria.science/andre/">&Eacute;tienne Andr&eacute;</a>, Universit&eacute; de Lorraine, France </li>
 	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae</a>, POSTECH, Korea</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
 		<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
 	<li><a href="https://people.csiro.au/v/R/robert-vanglabbeek">Rob van Glabbeek</a>, University of New South Wales, Australia</li>
+	<li><a href="https://www8.cs.fau.de/people/sergey-goncharov/">Sergey Goncharov</a>, Friedrich-Alexander 
+		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="http://www.stefan-gruner.de">Stefan Gruner</a>, University of Pretoria, South Africa</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
