--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ of Oslo, Norway</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
 	<li>Manuel Mazzara, Innopolis University, Russia</li>
+	<li>Catherine Meadows, Naval Research Laboratory, USA</li>
 	<li><a href="https://researchers.uq.edu.au/researcher/644">Larissa Meinicke</a>, The University of Queensland, Australia</li>
 	<li>Hans de Nivelle, Nazarbayev University, Kazakhstan</li>
 	<li><a href="http://olveczky.se">Peter &Ouml;lveczky</a>, University of Oslo, Norway
@@ -178,6 +179,8 @@ of Oslo, Norway</li>
 	<li>Riadh Robbana, Tunis el Manar University, Tunisia</li>
 	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
 	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
+		<li><a href="https://www8.cs.fau.de/people/schroeder/">Lutz Schr&ouml;der</a>, Friedrich-Alexander 
+		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="https://ict.hvl.no/people/volker-stolz/">Volker Stolz</a>, Western Norway University of Applied Sciences, Norway</i>
 
 		    </ul>
