--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@ of Oslo, Norway</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
-		<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
+	<li>Manuel Clavel, Vietnamese-German University, Vietnam</li>
+	<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
 	<li><a href="https://people.csiro.au/v/R/robert-vanglabbeek">Rob van Glabbeek</a>, University of New South Wales, Australia</li>
 	<li><a href="https://www8.cs.fau.de/people/sergey-goncharov/">Sergey Goncharov</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
