--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@ of Oslo, Norway</li>
 	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae</a>, POSTECH, Korea</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
+	<li><a href="https://www.bliudze.me/simon/">Simon Bliudze</a>, INRIA Lille, France</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
 	<li>Manuel Clavel, Vietnamese-German University, Vietnam</li>
 	<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
@@ -169,6 +170,7 @@ of Oslo, Norway</li>
 	<li><a href="https://www8.cs.fau.de/people/sergey-goncharov/">Sergey Goncharov</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="http://www.stefan-gruner.de">Stefan Gruner</a>, University of Pretoria, South Africa</li>
+		<li><a href="https://www.havelund.com/">Klaus Havelund</a>, Jet Propulsion Laboratory, USA</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
 	<li>Manuel Mazzara, Innopolis University, Russia</li>
