--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ of Oslo, Norway</li>
 	<li><a href="https://www8.cs.fau.de/people/sergey-goncharov/">Sergey Goncharov</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="http://www.stefan-gruner.de">Stefan Gruner</a>, University of Pretoria, South Africa</li>
-		<li><a href="https://www.havelund.com/">Klaus Havelund</a>, Jet Propulsion Laboratory, USA</li>
+	<li><a href="https://ohasan.seecs.nust.edu.pk/">Osman Hasan</a>, National University of Sciences and Technology, Pakistan</li>
+	<li><a href="https://www.havelund.com/">Klaus Havelund</a>, Jet Propulsion Laboratory, USA</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
 	<li>Manuel Mazzara, Innopolis University, Russia</li>
