--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@ of Oslo, Norway</li>
 	<li><a href="https://people.csiro.au/v/R/robert-vanglabbeek">Rob van Glabbeek</a>, University of New South Wales, Australia</li>
 	<li><a href="https://www8.cs.fau.de/people/sergey-goncharov/">Sergey Goncharov</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
+	<li><a href="https://www.tue.nl/en/research/researchers/jan-friso-groote/">Jan Friso Groote</a>, Eindhoven University 
+		of Technology, The Netherlands</li>
 	<li><a href="http://www.stefan-gruner.de">Stefan Gruner</a>, University of Pretoria, South Africa</li>
 	<li><a href="https://ohasan.seecs.nust.edu.pk/">Osman Hasan</a>, National University of Sciences and Technology, Pakistan</li>
 	<li><a href="https://www.havelund.com/">Klaus Havelund</a>, Jet Propulsion Laboratory, USA</li>
