--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ of Oslo, Norway</li>
 	<li><a href="https://ohasan.seecs.nust.edu.pk/">Osman Hasan</a>, National University of Sciences and Technology, Pakistan</li>
 	<li><a href="https://www.havelund.com/">Klaus Havelund</a>, Jet Propulsion Laboratory, USA</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
+	<li><a href="https://uclouvain.be/fr/repertoires/axel.legay">Axel Legay</a>, Universit&eacute; catholique de Louvain, Belgium</li>
 	<li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany
 	<li>Manuel Mazzara, Innopolis University, Russia</li>
 	<li>Catherine Meadows, Naval Research Laboratory, USA</li>
