--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ of Oslo, Norway</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li><a href="https://www.bliudze.me/simon/">Simon Bliudze</a>, INRIA Lille, France</li>
+	<li><a href="http://pages.di.unipi.it/bruni/">Roberto Bruni</a>, University of Pisa, Italy</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
 	<li>Manuel Clavel, Vietnamese-German University, Vietnam</li>
 	<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
