--- a/index.html
+++ b/index.html
@@ -184,12 +184,14 @@ of Oslo, Norway</li>
 	<li>Hans de Nivelle, Nazarbayev University, Kazakhstan</li>
 	<li><a href="http://olveczky.se">Peter &Ouml;lveczky</a>, University of Oslo, Norway
 	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
+		<li><a href="https://jose.proenca.org/">Jos&eacute; Proen&ccedil;a</a>, ISEP, Portugal</li>
 	<li>Riadh Robbana, Tunis el Manar University, Tunisia</li>
 	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
 	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
 		<li><a href="https://www8.cs.fau.de/people/schroeder/">Lutz Schr&ouml;der</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="https://ict.hvl.no/people/volker-stolz/">Volker Stolz</a>, Western Norway University of Applied Sciences, Norway</i>
+		<li><a href="http://staffwww.dcs.shef.ac.uk/people/G.Struth/">Georg Struth</a>, The University of Sheffield, UK</li>
 
 		    </ul>
             </div>
