--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ of Oslo, Norway</li>
 	<li>Hans de Nivelle, Nazarbayev University, Kazakhstan</li>
 	<li><a href="http://olveczky.se">Peter &Ouml;lveczky</a>, University of Oslo, Norway
 	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
+		<li><a href="https://sites.google.com/site/elainepimentel/">Elaine Pimentel</a>, Federal University of Rio Grande do Norte, Brazil</li>
 		<li><a href="https://jose.proenca.org/">Jos&eacute; Proen&ccedil;a</a>, ISEP, Portugal</li>
 	<li>Riadh Robbana, Tunis el Manar University, Tunisia</li>
 	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
