--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ of Oslo, Norway</li>
 	<li>Musab A. Alturki, Runtime Verification Inc., USA, and King Fahd University of Petroleum and Minerals, Saudi Arabia</li>
 	<li><a href="https://www.loria.science/andre/">&Eacute;tienne Andr&eacute;</a>, Universit&eacute; de Lorraine, France </li>
 	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae</a>, POSTECH, Korea</li>
-	<li><a href="http://fmt.isti.cnr.it/~mtbeek/:>Maurice ter Beek</a>, ISTI-CNR,Italy</li>
+	<li><a href="http://fmt.isti.cnr.it/~mtbeek/">Maurice ter Beek</a>, ISTI-CNR,Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li><a href="https://www.bliudze.me/simon/">Simon Bliudze</a>, INRIA Lille, France</li>
 	<li><a href="http://pages.di.unipi.it/bruni/">Roberto Bruni</a>, University of Pisa, Italy</li>
