--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Computing</h2>
 <hr size="1">
 <ul>
 <li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan. However, given the current uncertainty, virtual presentations will also be an opportunity.</li>
+<li>Springer will sponsor the Best Paper Award</li>
 </ul>
 <p>&nbsp;
 	
