--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ of Oslo, Norway</li>
 	<li>Musab A. Alturki, Runtime Verification Inc., USA, and King Fahd University of Petroleum and Minerals, Saudi Arabia</li>
 	<li><a href="https://www.loria.science/andre/">&Eacute;tienne Andr&eacute;</a>, Universit&eacute; de Lorraine, France </li>
 	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae</a>, POSTECH, Korea</li>
-	<li><a href="http://fmt.isti.cnr.it/~mtbeek/">Maurice ter Beek</a>, ISTI-CNR,Italy</li>
+	<li><a href="http://fmt.isti.cnr.it/~mtbeek/">Maurice ter Beek</a>, ISTI-CNR, Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
 	<li><a href="https://www.bliudze.me/simon/">Simon Bliudze</a>, INRIA Lille, France</li>
 	<li><a href="http://pages.di.unipi.it/bruni/">Roberto Bruni</a>, University of Pisa, Italy</li>
@@ -193,7 +193,7 @@ of Oslo, Norway</li>
 	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
 	<li><a href="https://www8.cs.fau.de/people/schroeder/">Lutz Schr&ouml;der</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
-	<li><a href="https://ict.hvl.no/people/volker-stolz/">Volker Stolz</a>, Western Norway University of Applied Sciences, Norway</i>
+	<li><a href="https://ict.hvl.no/people/volker-stolz/">Volker Stolz</a>, Western Norway University of Applied Sciences, Norway</li>
 	<li><a href="http://staffwww.dcs.shef.ac.uk/people/G.Struth/">Georg Struth</a>, The University of Sheffield, UK</li>
 
 		    </ul>
