--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <center>
 
-<img src="yurt.jpg" alt="Kazakh Yurt" width="700" height="453">
+<img src="yurt.jpg" title="Alexandr frolov, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" alt="Kazakh Yurt" width="700" height="453">
 
 <h1>ICTAC 2021</h1>
 <h2>18th International Colloquium on Theoretical Aspects of
