--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ promote research cooperation between developing and industrial
 countries.</p>
 </p>
 
-<p>The conference concerns all aspect of theoretical computer science, including, but are not limited to:</p>
+<p>The conference concerns all aspect of theoretical computer science, including, but not limited to:</p>
 
 <ul>
 <li>Languages and automata</li>
