--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ of Oslo, Norway</li>
 	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
 	<li><a href="https://sites.google.com/site/elainepimentel/">Elaine Pimentel</a>, Federal University of Rio Grande do Norte, Brazil</li>
 	<li><a href="https://jose.proenca.org/">Jos&eacute; Proen&ccedil;a</a>, Polytechnic Institute of Porto, Portugal</li>
-	<li>Riadh Robbana, Tunis el Manar University, Tunisia</li>
+	<li>Riadh Robbana, INSAT, Carthage University, Tunisia</li>
 	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
 	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
 	<li><a href="https://www8.cs.fau.de/people/schroeder/">Lutz Schr&ouml;der</a>, Friedrich-Alexander 
