--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ of Oslo, Norway</li>
 	<li>Antonio Cerone, Nazarbayev University, Kazakhstan</li>
 	<li>Manuel Clavel, Vietnamese-German University, Vietnam</li>
 	<li><a href="https://www.um.edu.mt/profile/adrianfrancalanza">Adrian Francalanza</a>, University of Malta, Malta</li>
-	<li><a href="https://people.csiro.au/v/R/robert-vanglabbeek">Rob van Glabbeek</a>, University of New South Wales, Australia</li>
+	<li><a href="https://people.csiro.au/v/R/robert-vanglabbeek">Rob van Glabbeek</a>, Data61, CSIRO, and University of New South Wales, Australia</li>
 	<li><a href="https://www8.cs.fau.de/people/sergey-goncharov/">Sergey Goncharov</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="https://www.tue.nl/en/research/researchers/jan-friso-groote/">Jan Friso Groote</a>, Eindhoven University 
@@ -199,8 +199,8 @@ of Oslo, Norway</li>
 	<li><a href="https://sites.google.com/site/elainepimentel/">Elaine Pimentel</a>, Federal University of Rio Grande do Norte, Brazil</li>
 	<li><a href="https://jose.proenca.org/">Jos&eacute; Proen&ccedil;a</a>, Polytechnic Institute of Porto, Portugal</li>
 	<li>Riadh Robbana, INSAT, Carthage University, Tunisia</li>
-	<li><a href="http://">Gwen Sala&uuml;n</a>, Universit&eacute; Grenoble Alpes, France</li>
-	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy</li>
+	<li><a href="http://">Gwen Sala&uuml;n</a>, University Grenoble Alpes, France</li>
+	<li><a href="https://www.unibo.it/sitoweb/davide.sangiorgi/en">Davide Sangiorgi</a>, University of Bologna, Italy, and INRIA, France</li>
 	<li><a href="https://www8.cs.fau.de/people/schroeder/">Lutz Schr&ouml;der</a>, Friedrich-Alexander 
 		University of Erlangen and N&uuml;rnberg, Germany</li>
 	<li><a href="https://ict.hvl.no/people/volker-stolz/">Volker Stolz</a>, Western Norway University of Applied Sciences, Norway</li>
