--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ of Oslo, Norway</li>
 	<li>Hans de Nivelle, Nazarbayev University, Kazakhstan</li>
 	<li><a href="https://www.jaist.ac.jp/~ogata/">Kazuhiro Ogata</a>, Japan Advanced Institute of Science and Technology, Japan</li>
 	<li><a href="http://olveczky.se">Peter &Ouml;lveczky</a>, University of Oslo, Norway
-	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, INRIA Saclay and LIX, France</li>
+	<li><a href="http://www.lix.polytechnique.fr/~catuscia/">Catuscia Palamidessi</a>, Inria, France</li>
 	<li><a href="https://sites.google.com/site/elainepimentel/">Elaine Pimentel</a>, Federal University of Rio Grande do Norte, Brazil</li>
 	<li><a href="https://jose.proenca.org/">Jos&eacute; Proen&ccedil;a</a>, Polytechnic Institute of Porto, Portugal</li>
 	<li>Riadh Robbana, INSAT, Carthage University, Tunisia</li>
