--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ of Oslo, Norway</li>
 	<li><a href="https://ths.rwth-aachen.de/people/erika-abraham/">Erika &Aacute;brah&aacute;m</a>, RWTH Aachen, Germany</li>
 	<li>Musab A. Alturki, Runtime Verification Inc., USA, and King Fahd University of Petroleum and Minerals, Saudi Arabia</li>
 	<li><a href="https://www.loria.science/andre/">&Eacute;tienne Andr&eacute;</a>, Universit&eacute; de Lorraine, France </li>
+	<li><a href="https://user.ceng.metu.edu.tr/~ebru/wordpress/">Ebru Aydin Gol</a>, Middle East Technical University, Turkey</li>
 	<li><a href="http://sevlab.postech.ac.kr/~kmbae/">Kyungmin Bae</a>, POSTECH, Korea</li>
 	<li><a href="http://fmt.isti.cnr.it/~mtbeek/">Maurice ter Beek</a>, ISTI-CNR, Italy</li>
 	<li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a>, LMU Munich, Germany</li>
