--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">News</h2>
 <hr size="1">
 <ul>
-<li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan. However, given the current uncertainty, virtual presentations will also be an opportunity.</li>
+<li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan.
+    However, given the current uncertainty, we will not be able to make a final decision until May.
+    Virtual presentations will be an opportunity even if a physical event will be held and
+	there will be <strong>no conference fee for virtual-only participants</strong>.</li>
 <li>Springer will sponsor the Best Paper Award</li>
 </ul>
 <p>&nbsp;
