--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -18,6 +18,18 @@
 
 <body>
 <center>
+<tr height="10pt">
+  <td class="text" align="center">
+    <hr> <a class="link" href="#BDATES">Important Dates</a> | <a
+            class="link" href="#BACKGROUND">Background and Objectives</a> | <a
+                      class="link" href="#DATES">Important Dates</a> | <a
+                      class="link" href="#CFP">Call for Papers</a> | <a
+                      class="link" href="#PROGRAMME">Programme</a> |
+                      class="link" href="#KEYNOTES">Keynote Speakers</a> |
+                      class="link" href="#COMMITTEES">Committees</a> |
+                      class="link" href="#SCHOOL">ICTAC School</a>
+   </td>
+</tr>
 
 <img src="../yurt.jpg" title="Alexandr frolov, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" alt="Kazakh Yurt" width="700" height="453">
 
