--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -20,14 +20,14 @@
 <center>
 <tr height="10pt">
   <td class="text" align="center">
-    <hr> <a class="link" href="#BDATES">Important Dates</a> | <a
+    <hr> <a class="link" style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             class="link" href="#BACKGROUND">Background and Objectives</a> | <a
-                      class="link" href="#DATES">Important Dates</a> | <a
-                      class="link" href="#CFP">Call for Papers</a> | <a
-                      class="link" href="#PROGRAMME">Programme</a> |
-                      class="link" href="#KEYNOTES">Keynote Speakers</a> |
-                      class="link" href="#COMMITTEES">Committees</a> |
-                      class="link" href="#SCHOOL">ICTAC School</a>
+            class="link" href="#DATES">Important Dates</a> | <a
+            class="link" href="#CFP">Call for Papers</a> | <a
+            class="link" href="#PROGRAMME">Programme</a> | <a
+            class="link" href="#KEYNOTES">Keynote Speakers</a> | <a
+            class="link" href="#COMMITTEES">Committees</a> | <a
+            class="link" href="#SCHOOL">ICTAC School</a>
    </td>
 </tr>
 
