--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -21,8 +21,7 @@
 <tr height="10pt">
   <td class="text" align="center">
     <hr> <a class="link" style="color:#B40431;" href="#DATES">Important Dates</a> | <a
-            class="link" href="#BACKGROUND">Background and Objectives</a> | <a
-            class="link" href="#DATES">Important Dates</a> | <a
+            class="link" href="#OBJECTIVES">Objectives and Scope</a> | <a
             class="link" href="#CFP">Call for Papers</a> | <a
             class="link" href="#PROGRAMME">Programme</a> | <a
             class="link" href="#KEYNOTES">Keynote Speakers</a> | <a
@@ -51,7 +50,7 @@ Computing</h2>
 </ul>
 <p>&nbsp;
 	
-<h2 id="news" style="color:#B40431;">Important Dates</h2>
+<h2 id="news" style="color:#B40431;" name="#DATES">Important Dates</h2>
 <hr size="1">
 <ul>
 <li><strong>Paper submission deadline: May 7, 2021</strong></li>
