--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -20,13 +20,13 @@
 <center>
 <tr height="10pt">
   <td class="text" align="center">
-    <hr> <a class="link" style="color:#B40431;" href="#DATES">Important Dates</a> | <a
-            class="link" href="#OBJECTIVES">Objectives and Scope</a> | <a
-            class="link" href="#CFP">Call for Papers</a> | <a
-            class="link" href="#PROGRAMME">Programme</a> | <a
-            class="link" href="#KEYNOTES">Keynote Speakers</a> | <a
-            class="link" href="#COMMITTEES">Committees</a> | <a
-            class="link" href="#SCHOOL">ICTAC School</a>
+    <hr> <a style="color:#B40431;" href="#DATES">Important Dates</a> | <a
+            style="color:#B40431;" href="#OBJECTIVES">Objectives and Scope</a> | <a
+            style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
+            style="color:#B40431;" href="#PROGRAMME">Programme</a> | <a
+            style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
+            style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
+            style="color:#B40431;" href="#SCHOOL">ICTAC School</a>
      <hr>
    </td>
 </tr>
@@ -50,7 +50,7 @@ Computing</h2>
 </ul>
 <p>&nbsp;
 	
-<h2 id="news" style="color:#B40431;" name="#DATES">Important Dates</h2>
+<h2 id="news" style="color:#B40431;"><a name="#DATES">Important Dates</a></h2>
 <hr size="1">
 <ul>
 <li><strong>Paper submission deadline: May 7, 2021</strong></li>
