--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -50,7 +50,7 @@ Computing</h2>
 </ul>
 <p>&nbsp;
 	
-<h2 id="news" style="color:#B40431;"><a name="#DATES">Important Dates</a></h2>
+<h2 style="color:#B40431;"><a name="#DATES">Important Dates</a></h2>
 <hr size="1">
 <ul>
 <li><strong>Paper submission deadline: May 7, 2021</strong></li>
