--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -50,7 +50,8 @@ Computing</h2>
 </ul>
 <p>&nbsp;
 	
-<a name="#DATES"><h2 style="color:#B40431;">Important Dates</h2></a>
+<a name="#DATES"></a>
+<h2 style="color:#B40431;">Important Dates</h2>
 <hr size="1">
 <ul>
 <li><strong>Paper submission deadline: May 7, 2021</strong></li>
