--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -19,7 +19,7 @@
 <body>
 <center>
 <tr height="10pt">
-  <td class="text" align="center">
+  <td align="center">
     <hr> <a style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OBJECTIVES">Objectives and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
