--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -20,7 +20,7 @@
 <center>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431;" href="#DATES">Important Dates</a> | <a
+    <hr> <a style="color:#B40431;" href="menu-test.hrml#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
             style="color:#B40431;" href="#PROGRAMME">Programme</a> | <a
