--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -20,8 +20,8 @@
 <center>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431;" href="menu-test.html#DATES">Important Dates</a> | <a
-            style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
+    <hr> <a style="color:#B40431" href="#DATES">Important Dates</a> | <a
+            style="color:#B40431" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
             style="color:#B40431;" href="#PROGRAMME">Programme</a> | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
