--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -16,13 +16,13 @@
 <center>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431" href="#DATES">Important Dates</a> | <a
-            style="color:#B40431" href="#OVERVIEW">Overview and Scope</a> | <a
+    <hr> <a style="color:#B40431;" href="#DATES">Important Dates</a> | <a
+            style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
             style="color:#997777;">Programme | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-            style="color:#55222;">ICTAC School
+            style="color:#FFAAAA;">ICTAC School
      <hr>
    </td>
 </tr>
