--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -19,7 +19,7 @@
     <hr> <a style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-            style="color:#997777;">Programme | <a
+            style="color:#FF7777;">Programme | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
             style="color:#FFAAAA;">ICTAC School
