--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -22,7 +22,7 @@
             style="color:#FF5555;">Programme | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-            style="color:#FFAAAA;">ICTAC School
+	    style="color:#FF2222;">ICTAC School</a>
      <hr>
    </td>
 </tr>
