--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -16,13 +16,15 @@
 <center>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431;" href="#DATES">Important Dates</a> | <a
+    <hr> <a style="color:#B40431;" href="https://ictac.isp.uni-luebeck.de/about" target="_tab">ICTAC Conference</a> | <a
+            style="color:#B40431;">Home</a> | <a
+            style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-            style="color:#FF5555;">Programme | <a
+            style="color:#662222;">Programme | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-	    style="color:#FF2222;">ICTAC School</a>
+	    style="color:#662222;">ICTAC School</a>
      <hr>
    </td>
 </tr>
