--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -17,7 +17,7 @@
 <tr height="10pt">
   <td align="center">
     <hr> <a style="color:#B40431;" href="https://ictac.isp.uni-luebeck.de/about" target="_tab">ICTAC Conference</a> | <a
-            style="color:#B40431;">Home</a> | <a
+            style="color:#B40431;">ICTAC 2021</a> | <a
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
