--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -24,7 +24,7 @@
             style="color:#662222;">Programme | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-	    style="color:#662222;">ICTAC School</a>
+	    style="color:#BBAAAA;">ICTAC School</a>
      <hr>
    </td>
 </tr>
