--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -21,8 +21,8 @@
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-            style="color:#662222;">Registration | <a
-            style="color:#662222;">Programme | <a
+            style="color:#CCBBBB;">Registration | <a
+            style="color:#CCBBBB;">Programme | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
 	    style="color:#BBAAAA;">ICTAC School</a>
