--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -22,10 +22,10 @@
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
 	    style="color:#CCAAAA;">Registration</a> | <a
-            style="color:#CCBBBB;">Programme</a> | <a
+            style="color:#CCAAAA;">Programme</a> | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-	    style="color:#BBAAAA;">ICTAC School</a>
+	    style="color:#CCAAAA;">ICTAC School</a>
      <hr>
    </td>
 </tr>
