--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -25,7 +25,7 @@
             style="color:#CCAAAA;">Programme</a> | <a
             style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-	    style="color:#CCAAAA;">ICTAC School</a>
+	    style="color:#CCAAAA;">ICTAC School 2021</a>
      <hr>
    </td>
 </tr>
