--- a/Old/menu-test.html
+++ b/Old/menu-test.html
@@ -18,6 +18,7 @@
   <td align="center">
     <hr> <a style="color:#B40431;" href="https://ictac.isp.uni-luebeck.de/about" target="_tab">ICTAC Conference</a> | <a
             style="color:#B40431;">ICTAC 2021</a> | <a
+            style="color:#B40431;" href="#NEWS">News</a> | <a
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
@@ -38,6 +39,7 @@ Computing</h2>
 </center>
 
 <hr>
+<a name="NEWS"></a>
 <h2 id="news" style="color:#B40431;">News</h2>
 <hr size="1">
 <ul>
