--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">News</h2>
 <hr size="1">
 <ul>
+	<li>Submission deadline <b>extended</b> to <i>May 14, 2021 (AoE)</i></li>	
 <li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan.
     However, given the current uncertainty, we will not be able to make a final decision until May.
     Virtual presentations will be an opportunity even if a physical event will be held and
