--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Computing</h2>
 <h2 style="color:#B40431;">Important Dates</h2>
 <hr size="1">
 <ul>
-	<li><strong>Paper submission deadline: <s>May 7, 2021</s>  May 14, 2021 (EXTENDED)</strong></li>
+	<li><strong>Paper submission deadline: <s>May 7, 2021</s>  May 14, 2021 AoE (EXTENDED)</strong></li>
 <li><strong>Notification: June 18,  2021</strong></li>
 </ul>
 </div>
