--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ University of Technology, Estonia
 
     
 
-<img src="https://ifm20.si.usi.ch/images/EAPLS_logo.jpg">
+<a href="https://eapls.org/"><img src="https://ifm20.si.usi.ch/images/EAPLS_logo.jpg"></a>
 
 
     <hr>
