--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h1>ICTAC 2021</h1>
 <h2>18th International Colloquium on Theoretical Aspects of
 Computing</h2>
-<h2>Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
+<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
 </center>
 
 <hr>
@@ -44,10 +44,7 @@ Computing</h2>
 <hr size="1">
 <ul>
 	<li>Submission deadline <b>extended</b> to <i>May 14, 2021 (AoE)</i></li>	
-<li>We hope to organize ICTAC 2021 as a physical event in Nur-Sultan.
-    However, given the current uncertainty, we will not be able to make a final decision until May.
-    Virtual presentations will be an opportunity even if a physical event will be held and
-	there will be <strong>no conference fee for virtual-only participants</strong>.</li>
+<li><strong>The conference will be entirely in virtual mode and there will be no conference fee</strong>.</li>
 <li>Springer will sponsor the Best Paper Award</li>
 </ul>
 <p>&nbsp;
