--- a/keynotes.html
+++ b/keynotes.html
@@ -16,14 +16,14 @@
 <tr height="10pt">
   <td align="center">
     <hr> <a style="color:#B40431;" href="https://ictac.isp.uni-luebeck.de/about" target="_tab">ICTAC Conference</a> | <a
-            style="color:#B40431;">ICTAC 2021</a> | <a
+            style="color:#B40431;" href="/.">ICTAC 2021</a> | <a
             style="color:#B40431;" href="#NEWS">News</a> | <a
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
 	    style="color:#CCAAAA;">Registration</a> | <a
             style="color:#CCAAAA;">Programme</a> | <a
-            style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
+            style="color:#B40431;">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
 	    style="color:#CCAAAA;">ICTAC School 2021</a>
      <hr>
@@ -37,8 +37,11 @@ Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
 <h1>KEYNOTE SPEAKERS</h1></center>
 <ul>
-	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>, RWTH Aachen University, Germany
-	    [<a "href="#WIS">Abstract and Bio</a>]</li>
+	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>,
+		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
+		<br>
+		<strong>oncurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
+	        [<a "href="#WIS">Abstract and Bio</a>]</li>
 	<li><a href="https://alandix.com">Alan Dix</a>, Swansea University, UK
 	    [<a "href="#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
@@ -50,6 +53,23 @@ Computing</h2>
 <a name="Wil"></a>
 <h2 id="news" style="color:#B40431;">Wil van der Aalst</h2>
 <hr size="1">
+<h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h12>
+<h3>Abstract</h3>
+<p>Process mining dramatically changed the way we look at process models and operational processes.
+	Even seemingly simple processes like Purchase-to-Pay (P2P) and Order-to-Cash (O2C) are often amazingly complex,
+	and traditional hand-made process models fail to capture the true fabric of such processes.
+	Many processes are inherently concurrent and involve interaction between different objects
+	(customers, suppliers, orders, items, shipments, payments, machines, workers, etc.). 
+	Process mining uses event data to construct process models that can be used to diagnose performance and compliance problems.
+	If such models reflect reality well, they can be used for forward-looking forms of process mining,
+	including predictive analytics, evidence-based automation, and what-if simulation.
+	The ultimate goal is to create a ``digital twin'' that can be used to explore different improvement actions.
+	In his keynote, Wil van der Aalst will provide an overview of process mining and the spectacular developments in the field.
+	Currently, there are over 35 process mining companies (including Celonis with is the highest-valued startup in Germany)
+	and most of the larger European firms have applied process mining.
+	Despite the successes and mature tools, some of the foundational problems remain "unsolved" and will block future progress.
+	Therefore, the keynote highlights the challenges related to concurrency and objects in process mining.</p>
+<h3>Bio</h3>
 <p>&nbsp;</p>
 <br>
 
@@ -58,18 +78,21 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">Alan Dix</h2>
 <hr size="1">
 <p>&nbsp;</p>
+<br>
 
 <hr size="1">
 <a name="KIM"></a>
 <h2 id="news" style="color:#B40431;">Kim Larsen</h2>
 <hr size="1">
 <p>&nbsp;</p>
+<br>
 
 <hr size="1">
 <a name="GRIGORE"></a>
 <h2 id="news" style="color:#B40431;">Grigore Rosu</h2>
 <hr size="1">
 <p>&nbsp;</p>
+<br>
 
 	   
 
