--- a/keynotes.html
+++ b/keynotes.html
@@ -35,7 +35,7 @@
 <h2>18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
-<h1>KEYNOTE SPEAKERS</h1></center>
+<h1 id="news" style="color:#B40431;>KEYNOTE SPEAKERS</h1></center>
 <ul>
 	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>,
 		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
@@ -53,7 +53,7 @@ Computing</h2>
 <a name="Wil"></a>
 <h2 id="news" style="color:#B40431;">Wil van der Aalst</h2>
 <hr size="1">
-<h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h12>
+<h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
 <h3>Abstract</h3>
 <p>Process mining dramatically changed the way we look at process models and operational processes.
 	Even seemingly simple processes like Purchase-to-Pay (P2P) and Order-to-Cash (O2C) are often amazingly complex,
