--- a/keynotes.html
+++ b/keynotes.html
@@ -35,12 +35,14 @@
 <h2>18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
-<h1 id="news" style="color:#B40431;>KEYNOTE SPEAKERS</h1></center>
+<h1 style="color:#B40431;>KEYNOTE SPEAKERS</h1>
+<hr>
+</center>
 <ul>
 	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>,
 		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
 		<br>
-		<strong>oncurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
+		<strong>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
 	        [<a "href="#WIS">Abstract and Bio</a>]</li>
 	<li><a href="https://alandix.com">Alan Dix</a>, Swansea University, UK
 	    [<a "href="#ALAN">Abstract and Bio</a>]</li>
