--- a/keynotes.html
+++ b/keynotes.html
@@ -43,7 +43,8 @@ Computing</h2>
 		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
 		<br>
 		<strong>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
-	        [<a href="#WIS">Abstract and Bio</a>]</li>
+	        [<a href="#WIS">Abstract and Bio</a>]
+	        <br></li>
 	<li><a href="https://alandix.com">Alan Dix</a>, Swansea University, UK
 	    [<a "href="#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
