--- a/keynotes.html
+++ b/keynotes.html
@@ -45,8 +45,11 @@ Computing</h2>
 		<strong>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
 	        [<a href="#WIS">Abstract and Bio</a>]
 	        <br></li>
-	<li><a href="https://alandix.com">Alan Dix</a>, Swansea University, UK
-	    [<a "href="#ALAN">Abstract and Bio</a>]</li>
+	<li><a href="https://alandix.com">Alan Dix</a>,
+		Computational Foundry, Swansea University
+		<br>
+		<strong>Qualitative–Quantitative Reasoning: thinking informally about formal things</strong>
+	        [<a "href="#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>, University of Illinois at Urbana-Champaign, USA</li>
 	</ul>
@@ -57,7 +60,7 @@ Computing</h2>
 <h2 style="color:#B40431;">Wil van der Aalst</h2>
 <hr size="1">
 <h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
-<h3 style="color:#B40431;">>Abstract</h3>
+<h3 style="color:#B40431;">Abstract</h3>
 <p>Process mining dramatically changed the way we look at process models and operational processes.
 	Even seemingly simple processes like Purchase-to-Pay (P2P) and Order-to-Cash (O2C) are often amazingly complex,
 	and traditional hand-made process models fail to capture the true fabric of such processes.
@@ -72,7 +75,7 @@ Computing</h2>
 	and most of the larger European firms have applied process mining.
 	Despite the successes and mature tools, some of the foundational problems remain "unsolved" and will block future progress.
 	Therefore, the keynote highlights the challenges related to concurrency and objects in process mining.</p>
-<h3 style="color:#B40431;">>Bio</h3>
+<h3 style="color:#B40431;">Bio</h3>
 <p>Prof.dr.ir. Wil van der Aalst is a full professor at RWTH Aachen University leading the Process and Data Science (PADS) group.
 	He is also part-time affiliated with the Fraunhofer-Institut für Angewandte Informationstechnik (FIT) where
 	he leads FIT's Process Mining group and the Technische Universiteit Eindhoven (TU/e).
@@ -101,9 +104,9 @@ Computing</h2>
 <h2 id="news" style="color:#B40431;">Alan Dix</h2>
 <hr size="1">
 <h2><h2>
-<h3 style="color:#B40431;">>Abstract</h3>
+<h3 style="color:#B40431;">Abstract</h3>
 <p></p>
-<h3 style="color:#B40431;">>Bio</h3>
+<h3 style="color:#B40431;">Bio</h3>
 <p></p>
 <br>
 
@@ -111,14 +114,22 @@ Computing</h2>
 <a name="KIM"></a>
 <h2 id="news" style="color:#B40431;">Kim Larsen</h2>
 <hr size="1">
-<p></p>
+<h2>TBA<h2>
+<h3 style="color:#B40431;">Abstract</h3>
+<p>TBA</p>
+<h3 style="color:#B40431;">Bio</h3>
+<p>TBA</p>
 <br>
 
 <hr size="1">
 <a name="GRIGORE"></a>
 <h2 id="news" style="color:#B40431;">Grigore Rosu</h2>
 <hr size="1">
-<p>&nbsp;</p>
+<h2>TBA<h2>
+<h3 style="color:#B40431;">Abstract</h3>
+<p>TBA</p>
+<h3 style="color:#B40431;">Bio</h3>
+<p>TBA</p>
 <br>
 
 	   
