--- a/keynotes.html
+++ b/keynotes.html
@@ -105,7 +105,28 @@ Computing</h2>
 <hr size="1">
 <h2><h2>
 <h3 style="color:#B40431;">Abstract</h3>
-<p></p>
+<p>When I first read Hardy and Wright’s Number Theory I was captivated.  However, as much as the mathematics itself, one statement always stood out for me. 
+	In the very first chapter they list a number of “questions concerning primes”, the first of which is whether there is a formula for the nth prime. 
+	Hardy and Wright explicitly say that this seems “unlikely” given the distribution of the series is “quite unlike what we should expect
+	on any such hypothesis.” 
+	I think most number theorists would still agree with this assertion, indeed many cryptographic techniques would collapse if it such a formulae
+	were discovered. 
+	Yet what is this sense that the structure of primes and the structure of formulae are so different? 
+	It is not formal mathematics itself, else it would be a proof.
+        <br>
+	In engineering, computation, physics, indeed any quantitative or formal domain, the precise and provable sits alongside an informal grasp of the
+	nature of the domain.  
+	This was certainly true in my own early and more recent work on formal modelling of human computer interaction: sometimes, as in the case of undo,
+	one can make exact and faithful statements and proofs, but more often in order to achieve formal precision, one resorts to simplistic representations
+	of real-life. 
+	However, despite their gap from the true phenomena, these modes, however lacking in fidelity, still give us insight.  
+        <br>
+	I’m sure this will be familiar to those working in other areas where theoretical models are applied to practical problems. 
+	There is a quantum-like tension between the complexity of the world and our ability to represent it, between accuracy and precision, between fidelity and formality.  Yet, we do learn about real phenomena from these simplified models, and in many contexts, from primary school estimation to scientific research we use these forms of thinking – I call this qualitative–quantitative reasoning.
+
+This has become particularly important during Covid, when both simple formulae and massive supercomputing models offer precise predictions of the impact of specific interventions. However, even the most complex model embodies simplifications and it is when the different models lead to qualitatively similar behaviours that they are most trusted.  Similar issues arise for climate change, international economics and supermarket shopping. 
+
+Qualitative–quantitative reasoning is ubiquitous, but not often discussed – almost a dirty secret for the formalist and yet what makes theory practical.  There are lessons for science and for schools, challenges for visualisation and argumentation.  I don’t know all of the answers, but by bringing this to the surface I know there are exciting questions.</p>
 <h3 style="color:#B40431;">Bio</h3>
 <p></p>
 <br>
